--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-google-maps": "9.4.5",
     "react-moment": "^0.9.2",
     "react-notification-alert": "0.0.12",
+    "react-paginate": "^6.3.0",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
