--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
-    "reactstrap": "8.0.0"
+    "reactstrap": "8.0.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "PORT=3011 react-scripts start",
